trunk/Archive2/75/0e843e8d119306/output
+ g++ -std=c++1y -O0 -Wall -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:128:11: error: aggregate 'TD<type_list<unit_step<Start, Point1>, unit_step<Point1, Point2>, unit_step<Point2, End> > > t' has incomplete type and cannot be defined
     TD<T> t;
           ^
+ clang++ -std=c++1y -O0 -Wall -pedantic -pthread main.cpp
main.cpp:128:11: error: implicit instantiation of undefined template 'TD<type_list<unit_step<Start, Point1>, unit_step<Point1, Point2>, unit_step<Point2, End> > >'
    TD<T> t;
          ^
main.cpp:124:23: note: template is declared here
template<class> class TD;
                      ^
1 error generated.
